Change readme to Org mode to test out how GitHub copes with that

--- a/README
+++ b/README
@@ -1,13 +1,19 @@
-This repository contains backup tools and backups of material from
-slony.info.
+* slony.info Backups
 
-1.  Mail archives
+  This repository contains backup tools and backups of material from
+  [[http://slony.info][slony.info]].
 
-    The slony.info site runs Mailman; the script pulls monthly
-    material.
+  - Mail archives :: The slony.info site runs Mailman; the script
+                     pulls monthly material.
+  - Bugzilla :: The script pulls all available bugs as web pages,
+                along with summary pages of all bugs that are "open"
+                and all bugs that are "closed."
 
-2.  Bugzilla
+** How does it run?
 
-    The script pulls all available bugs as web pages, along with
-    summary pages of all bugs that are "open" and all bugs that are
-    "closed."
+   There are a pair of scripts, ~Slony-Archive-Bugzilla.sh~ and
+   ~Slony-Archive-Mail.sh~.
+
+   These scripts are run on one of Chris' computers via ~crontab~ on a
+   daily basis, and they pull the latest data into a checkout of this
+   repository, check it in, and push it up to GitHub.
